[package]
name = "RustGameEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.20.0"
specs-derive = "0.4.1"
rand = "0.6"

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["image"]
